[package]
name = "nic8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3", features = ["full"] }
tokio-util = { version = "0.7" }
anyhow = "1.0.68"
chrono = "0.4.31"
async-trait="0.1.63"